css fixes for spacing

--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -41,6 +41,7 @@
 
   border: none;
   grid-column: 1/13;
+  margin: 0 auto;
   max-height: 48px;
 
   @media only all and (min-width: settings.$breakpoint-medium) {
